# image_tagger

./: .clauderc  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.txt  build.py  main.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
cfg/: settings.example.yaml  settings.yaml  settings.yaml.example  system.yaml
config/: cfg.yaml  dynamic.yaml  label.yaml  settings.yaml
docs/: changelog.md  installation.md  installation_uv.md  installation_venv.md  training.md  usage.md
img/: dog.xml
src/: config.py  const.py  core.py  func.py  image_widget.py  loglo.py  model.py  object_tagger.py  settings.py
src/dialogs/: __init__.py  categorize_media.py  class_mapping.py  convert_settings.py  label_mode.py  param.py  sam3_mode.py  set_sam3_model.py  set_yolo_model.py  text_prompts.py  train_yolo.py  train_yolo_advanced.py
src/example/: video_player.py
src/examples/: val_yolo.py
src/for_training/: continue_train.txt  downloader.py  split_dataset.py  train_yolo.py  val_yolo.py
src/utils/: const.py  cropper.py  dialogs.py  dynamic_settings.py  file_handler.py  func.py  global_param.py  img_handler.py  loglo.py  model.py  split_dataset.py  train_yolo.py  val_yolo.py  validate_model.py
tools/: cuda_info.py
